# Quadruped_Project_Scandia

./: .gitignore  README.md
doc/: install_ros.md  install_ros.txt  packages_doc.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
quadruped_bringup/: CMakeLists.txt  package.xml
quadruped_control/: CMakeLists.txt  package.xml
quadruped_description/: CMakeLists.txt  README.md  README.txt  package.xml
quadruped_description/Notspot/launch/: rviz_fake_joints.launch.py  rviz_fake_joints.launch.xml
quadruped_description/Notspot/rviz/: rviz_fake_joints.rviz
quadruped_description/Notspot/urdf/: quadruped_robot.urdf
quadruped_description/launch/: rviz_fake_joints.launch.py
quadruped_description/urdf/: quadruped_robot.urdf
quadruped_firmware/: CMakeLists.txt  package.xml
quadruped_gazebo/: CMakeLists.txt  package.xml
quadruped_hardware_interface/: CMakeLists.txt  package.xml
quadruped_interfaces/: CMakeLists.txt  package.xml
quadruped_nav/quadruped_localization/: CMakeLists.txt  package.xml
quadruped_nav/quadruped_slam/: CMakeLists.txt  package.xml
quadruped_path_planner/: CMakeLists.txt  package.xml
quadruped_vision/: CMakeLists.txt  package.xml
robots_sim/: README.md
robots_sim/champ_robot/launch/: gazebo.launch.py
src/quadruped_description/: CMakeLists.txt
test_package/: README.md  package.xml  setup.py
test_package/launch/: publisher_camera.launch.py
test_package/rviz/: camera.rviz
test_package/test_package/: publisher_camera.py  subscriber_camera.py
(+22 files in other folders)
